부트스트랩과 맞춤법 링크 추가

--- a/wordcount/templates/result.html
+++ b/wordcount/templates/result.html
@@ -2,6 +2,10 @@
 
 <a href = "{% url 'home' %}"> 다시 하기 </a>
 <br>
+<br>
+
+<a href = "https://alldic.daum.net/grammar_checker.do"> 맞춤법 검사 </a>
+<br>
 
 <h2>    입력한 텍스트 : </h2>
 
